--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^4.0.1",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "express.js": "^1.0.0",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
